# Melt-Desktop

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  test_alpha.rs  test_import.rs  test_shader.rs
assets/waybar/: config  style.css
resources/: default_config.toml
src/: animations.rs  config.rs  focus.rs  input.rs  main.rs  mnemonics.rs  native.rs  stacking.rs  state.rs  theme.rs  winit.rs  workspaces.rs
src/decorations/: borders.rs  buttons.rs  mod.rs  title_bar.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  security_context.rs  session_lock.rs  xdg_decoration.rs  xdg_shell.rs
