[package]
name = "melt-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "renderer_gl",
]

[features]
default = ["winit"]
winit = []
native = [
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_egl",
    "smithay/backend_libinput",
    "smithay/backend_session",
    "smithay/backend_session_libseat",
    "smithay/backend_udev",
]
xwayland = ["smithay/xwayland"]
